Add homepage and deploy scripts; set router basename

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "parcel-react-client-starter",
+  "homepage": "https://github.com/Averand1/recursive-squares",
   "private": true,
   "version": "0.0.0",
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "gh-pages": "^6.3.0",
     "parcel": "^2.14.4"
   }
 }
